--- a/src/app/shared/dialogs/outfit-dialog/outfit-dialog.component.html
+++ b/src/app/shared/dialogs/outfit-dialog/outfit-dialog.component.html
@@ -26,12 +26,12 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Prendas</mat-label>
-      <mat-select formControlName="prendas" multiple required>
-        <mat-option *ngFor="let prenda of prendas()" [value]="prenda.id">
-          {{prenda.nombre}} ({{prenda.categoria}})
-        </mat-option>
-      </mat-select>
+<!--      <mat-label>Prendas</mat-label>-->
+<!--&lt;!&ndash;      <mat-select formControlName="prendas" multiple required>&ndash;&gt;-->
+<!--&lt;!&ndash;        <mat-option *ngFor="let prenda of prendas()" [value]="prenda.id">&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          {{prenda.nombre}} ({{prenda.categoria}})&ndash;&gt;&ndash;&gt;-->
+<!--        </mat-option>-->
+<!--      </mat-select>-->
     </mat-form-field>
 
     <mat-form-field appearance="outline">
