--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -1,5 +1,5 @@
 .sidenav-container {
-  height: 100%; /* Updated from 100vh to 100% */
+  height: 100vh; /* Updated from 100vh to 100% */
 }
 
 .sidenav {
@@ -18,14 +18,14 @@
   z-index: 1; /* New code added */
 }
 
-.main-content {
-  padding: 24px;
-  background-color: var(--background);
-  min-height: calc(100vh - 64px);
-}
+/*.main-content {*/
+/*  padding: 24px;*/
+/*  background-color: var(--background);*/
+/*  min-height: calc(100vh - 64px);*/
+/*}*/
 
-@media (max-width: 768px) {
-  .main-content {
-    padding: 16px;
-  }
-}
+/*@media (max-width: 768px) {*/
+/*  .main-content {*/
+/*    padding: 16px;*/
+/*  }*/
+/*}*/
