--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,9 +1,18 @@
-<mat-nav-list>
-  <a mat-list-item
-     *ngFor="let item of menuItems"
-     [routerLink]="item.path"
-     [ngClass]="{'active': isActive(item.path)}">
-    <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
-    <span matListItemTitle>{{item.title}}</span>
-  </a>
+<mat-nav-list class="flex flex-col max-h-full">
+
+  <div class="grow">
+    <a mat-list-item
+       *ngFor="let item of menuItems"
+       [routerLink]="item.path"
+       [ngClass]="{'active': isActive(item.path)}">
+      <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+      <span matListItemTitle>{{item.title}}</span>
+    </a>
+  </div>
+  <div>
+    <a mat-list-item (click)="logOut()">
+      <mat-icon matListItemIcon>logout</mat-icon>
+      <span matListItemTitle>Log out</span>
+    </a>
+  </div>
 </mat-nav-list>
